namespace java com.acme.rc.Exception

exception RegistCenterException {
    1:i32 code;
    2:string message;
}